--- a/style.css
+++ b/style.css
@@ -267,6 +267,16 @@ footer {
         padding: 0 5vw;
     }
 
+     h1 {
+        font-size: clamp(18px, 5vw, 30px);
+        text-align: left;
+        align-items: flex-start;
+    }
+
+    h1 span {
+        white-space: nowrap;
+    }
+
     .hamburger-icon {
         display: block;
     }
