--- a/style.css
+++ b/style.css
@@ -267,20 +267,17 @@ footer {
         padding: 0 5vw;
     }
 
-     h1 {
-        font-size: clamp(18px, 5vw, 30px);
+    .uvod h1 {
+        font-size: clamp(18px, 5vw, 30px) !important;
         text-align: left;
         align-items: flex-start;
     }
-
-    h1 span {
+    .uvod h1 span {
         white-space: nowrap;
     }
-
     .hamburger-icon {
         display: block;
     }
-
     nav {
         display: block;
         position: absolute;
